# wayland-ptt-rs

./: .gitignore  Cargo.toml  Makefile  README.md  push-to-talk.cpp  wayland-ptt.desktop
src/: args.rs  evdev.rs  lib.rs  main.rs  setup_evdev.rs  x11.rs
tests/: args.rs  evdev.rs  setup_evdev.rs  x11.rs
