[package]
name = "wayland-ptt"
version = "0.1.1"
edition = "2024"
description = "Enables push-to-talk (PTT) in X11 apps running under XWayland"
repository = "https://github.com/willroberts/wayland-ptt-rs"
license = "MIT"
keywords = ["wayland", "xwayland", "x11", "push-to-talk", "evdev"]
categories = ["command-line-utilities"]

[dependencies]
evdev = "0.13.2"
x11rb = { version = "0.13.2", features = ["xtest"] }
xkbcommon-rs = "0.1.2"
